--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,5 +2,8 @@
 	"appId": "io.ionic.starter",
 	"appName": "demo",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+  "android": {
+    "minWebViewVersion": 55
+  }
 }
